# conflux-engine

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  conflux.toml.example  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
assets/schemas/: normalized-profile.schema.json
crates/conflux-backend/: Cargo.toml
crates/conflux-backend/src/: error.rs  lib.rs  runtime.rs  traits.rs
crates/conflux-backend/src/singbox/: config.rs  mod.rs  process.rs
crates/conflux-backend/src/singbox/snapshots/: conflux_backend__singbox__config__tests__hysteria2.snap  conflux_backend__singbox__config__tests__shadowsocks.snap  conflux_backend__singbox__config__tests__trojan.snap  conflux_backend__singbox__config__tests__vless.snap  conflux_backend__singbox__config__tests__vmess.snap
crates/conflux-backend/tests/fixtures/: nodes.json
crates/conflux-cli/: Cargo.toml
crates/conflux-cli/src/: main.rs
crates/conflux-core/: Cargo.toml
crates/conflux-core/src/: lib.rs
crates/conflux-core/src/fetch/: happ.rs  headers.rs  mod.rs
crates/conflux-core/src/normalize/: mod.rs
crates/conflux-core/src/parse/: clash.rs  expand.rs  mod.rs  uri.rs
crates/conflux-core/tests/: live_fetch.rs
crates/conflux-daemon/: Cargo.toml
crates/conflux-daemon/src/: config.rs  lib.rs  main.rs
crates/conflux-ipc/: Cargo.toml
crates/conflux-ipc/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/conflux-protocol/: Cargo.toml
crates/conflux-protocol/src/: credentials.rs  error.rs  fingerprint.rs  lib.rs  node.rs  protocol.rs  redact.rs  subscription.rs  tls.rs  transport.rs
docs/: architecture.md  backend-singbox.md  ipc-protocol.md  subscription-formats.md  windows-integration.md
examples/basic-fetch/: Cargo.toml
examples/basic-fetch/src/: main.rs
src/: lib.rs
