[workspace]
resolver = "2"
members = [
    "crates/conflux-protocol",
    "crates/conflux-core",
    "crates/conflux-backend",
    "crates/conflux-ipc",
    "crates/conflux-cli",
    "crates/conflux-daemon",
    "examples/basic-fetch",
]

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.86"
repository = "https://github.com/spamulodd/conflux-engine"

[workspace.dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
percent-encoding = "2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "sync", "fs"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["serde"] }

[package]
name = "conflux-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Universal proxy subscription engine facade"

[lib]
path = "src/lib.rs"

[dependencies]
conflux-core = { path = "crates/conflux-core" }
conflux-protocol = { path = "crates/conflux-protocol" }
conflux-backend = { path = "crates/conflux-backend" }
