[package]
name = "conflux-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Backend trait and sing-box adapter for conflux-engine"

[lib]
name = "conflux_backend"
path = "src/lib.rs"

[dependencies]
conflux-core = { path = "../conflux-core" }
conflux-protocol = { path = "../conflux-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { version = "1", features = ["json"] }

[features]
default = []
singbox-integration = []
