[package]
name = "conflux-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Fetch, parse, and normalize proxy subscription content"

[dependencies]
base64 = { workspace = true }
conflux-protocol = { path = "../conflux-protocol" }
percent-encoding = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
