[package]
name = "conflux-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared domain types for the conflux subscription engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
